fixed line spacing

--- a/src/Components/Departments/departments.scss
+++ b/src/Components/Departments/departments.scss
@@ -79,6 +79,10 @@ figure {
       line-height: 2.125rem;
       color: #1a1919;
     }
+    ul{
+      line-height: 2.125rem;
+      color: #4f4f4f;
+    }
     h2 {
       text-transform: capitalize;
       font-weight: 700;
