--- a/src/Components/Events/events.scss
+++ b/src/Components/Events/events.scss
@@ -73,6 +73,10 @@
       line-height: 2.125rem;
       color: #4f4f4f;
     }
+    ul{
+      line-height: 2.125rem;
+      color: #4f4f4f;
+    }
     h2 {
       text-transform: capitalize;
       font-weight: 700;
